--- a/index.html
+++ b/index.html
@@ -24,31 +24,12 @@
 
 	<div class="section no-pad-bot" id="index-banner">
 		<div class="container">
-			<h1 class="header center">Building real time web apps</h1>
-			<div class="row">
-				<div class="col offset-s2 offset-m4 s8 m4">
-					<div class="card medium">
-						<div class="card-image">
-							<img src="img/jad.jpg">
-							<span class="card-title text-shadow">Jad Joubran</span>
-						</div>
-						<div class="card-content center">
-							<p>
-								Cofounder &amp; CTO of <a href="https://www.etobb.com/" target="_blank">eTobb.com</a><br>
-								Writer and Expert Mentor on <a href="https://www.codementor.io/jadjoubran" target="_blank">CodeMentor.io</a>
-								<br>
-								<br>
-								<a class="github-button" href="https://github.com/jadjoubran" aria-label="Follow @jadjoubran on GitHub">Follow @jadjoubran</a>
-								<br>
-								<a href="https://twitter.com/JoubranJad" class="twitter-follow-button" data-show-count="false">Follow @JoubranJad</a>
-								<br>
-							</p>
-						</div>
-					</div>
-				</div>
+			<div class="row center">
+				<br>
+				<img src="img/websockets.png">
 			</div>
 			<div class="row center">
-				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Get started</a>
+				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
 			</div>
 			<br>
 			<br>
@@ -57,14 +38,11 @@
 
 	<div id="modal-get-started" class="modal">
 		<div class="modal-content">
-			<h4>Interactive Tutorial</h4>
+			<h4>Proceed to step 2</h4>
 			<p class="flow-text">
-				This tutorial contains <strong>7 steps</strong>. Each step being in a different <strong>branch</strong>.<br>
-				We are currently in step 0 on branch <strong>Master</strong>.<br>
-				Let's start the tutorial by switching to <strong>step1</strong> and then press Done
 				<blockquote class="flow-text">
 					git checkout -- .<br>
-					git checkout step1
+					git checkout step2
 				</blockquote>
 			</p>
 		</p>
@@ -80,7 +58,10 @@
 <script>
 	$(document).ready(function(){
 		$('.modal-trigger').leanModal({
-			in_duration: 150
+			in_duration: 150,
+			complete: function(){
+				window.location.reload();
+			}
 		});
 	});
 </script>
