--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 			1px 1px 1px rgba(0,0,0,0.6);
 		}
 	</style>
+	<title>Step 2</title>
 </head>
 
 <body>
 	<nav class="indigo darken-1" role="navigation">
 		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Workshop</a>
 			<ul class="right">
-				<li>Step 1</li>
+				<li>Step 2</li>
 			</ul>
 		</div>
 	</nav>
@@ -26,7 +27,6 @@
 		<div class="container">
 			<div class="row center">
 				<br>
-				<img src="img/websockets.png">
 			</div>
 			<div class="row center">
 				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
@@ -38,11 +38,11 @@
 
 	<div id="modal-get-started" class="modal">
 		<div class="modal-content">
-			<h4>Proceed to step 2</h4>
+			<h4>Proceed to step 3</h4>
 			<p class="flow-text">
 				<blockquote class="flow-text">
 					git checkout -- .<br>
-					git checkout step2
+					git checkout step3
 				</blockquote>
 			</p>
 		</p>
