--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			1px 1px 1px rgba(0,0,0,0.6);
 		}
 	</style>
+	<title>Step 1</title>
 </head>
 
 <body>
@@ -66,7 +67,5 @@
 	});
 </script>
 
-<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </body>
 </html>
