--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="container">
 			<div class="row center">
 				<br>
-				<img src="img/websockets.png">
+				<img class="materialboxed" src="img/websockets.png">
 			</div>
 			<div class="row center">
 				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
