done from Step2

--- a/index.html
+++ b/index.html
@@ -25,7 +25,38 @@
 
 	<div class="section no-pad-bot" id="index-banner">
 		<div class="container">
-			<div class="row center">
+			<div class="row">
+				<br>
+				<ul class="collapsible" data-collapsible="accordion">
+					<li>
+						<div class="collapsible-header active"><i class="mdi-action-account-circle"></i>Create an account on Pusher</div>
+						<div class="collapsible-body">
+							<p>
+								Open <a href="https://pusher.com/" target="_blank">pusher.com</a> and register using this Promo Code: XXXX-YYYY-ZZZZ<br>
+								This Promo Code exclusive to today's attendees will get you 120$ worth of credits for free.<br>
+								That's 6 months of the Startup plan.
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="collapsible-header"><i class="mdi-social-whatshot"></i>Enable Client Events</div>
+						<div class="collapsible-body">
+							<p>
+								Go to Settings And <strong>Enable Client Events</strong> and then save.
+							</p>
+						</div>
+					</li>
+					<li>
+						<div class="collapsible-header"><i class="mdi-hardware-desktop-windows"></i>Pusher Javascript SDK</div>
+						<div class="collapsible-body">
+							<p>
+								Go back to <strong>App Keys</strong> and locate the link to <strong>pusher.min.js</strong>.<br>
+								For the sake of this tutorial we need to download it to our js folder so we can reference it locally.<br>
+								Add a script tag that references the local <strong>js/pusher.min.js</strong> that you just downloaded
+							</p>
+						</div>
+					</li>
+				</ul>
 				<br>
 			</div>
 			<div class="row center">
