--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<div class="container">
 			<div class="row">
 				<br>
+				<div class="collection-header"><h4>Frontend setup</h4></div>
 				<ul class="collapsible" data-collapsible="accordion">
 					<li>
 						<div class="collapsible-header active"><i class="mdi-action-account-circle"></i>Create an account on Pusher</div>
