added message to json object

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								</tr>
 								<tr>
 									<th>Data</th>
-									<td>{"name": "Your name here"}</td>
+									<td>{"message": "Hello World"}</td>
 								</tr>
 							</table>
 							<p>
