fixed composer cli

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="collapsible-header"><i class="mdi-file-file-download"></i>Composer install it</div>
 						<div class="collapsible-body">
 							<p class="with-code">From the CLI: </p>
-							<blockquote class="flow-text">composer install pusher-php-server</blockquote>
+							<blockquote class="flow-text">composer require pusher-php-server</blockquote>
 						</div>
 					</li>
 					<li>
