--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 	<div class="section no-pad-bot" id="index-banner">
 		<div class="container">
 			<div class="row">
+				<div class="collection-header"><h4>Authenticating Users</h4></div>
 				<br>
-				<br>
+
 			</div>
 			<div class="row center">
 				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
@@ -60,6 +61,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/materialize.min.js"></script>
 <script src="js/pusher.min.js"></script>
+<script src="js/app.js"></script>
 <script>
 	$(document).ready(function(){
 		$('.modal-trigger').leanModal({
@@ -71,7 +73,5 @@
 	});
 </script>
 
-<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </body>
 </html>
