--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
 				<br>
 				<ul class="collapsible" data-collapsible="accordion">
 					<li>
+						<div class="collapsible-header active"><i class="mdi-action-perm-identity"></i>Add your name to show up on the chat</div>
+						<div class="collapsible-body">
+							<p>
+								Create a <strong>me.php</strong> file at the root level and create a PHP array called <strong>$user_array</strong> that contains a <strong>full_name</strong> and an <strong>email</strong> and enter your full name and email address. If you have a gravatar image setup on your email address, it'll show up in the next step!<br>
+								Changes to this file will remain in the next steps.
+							</p>
+						</div>
+					</li>
+					<li>
 						<div class="collapsible-header active"><i class="mdi-av-my-library-books"></i>Open the Pusher Documentation</div>
 						<div class="collapsible-body">
 							<p>
