--- a/index.html
+++ b/index.html
@@ -29,15 +29,18 @@
 		#whos-online-count{
 			margin-top: 35px;
 		}
+		.character-counter{
+			float: left !important;
+		}
 	</style>
-	<title>Step 6</title>
+	<title>Step 7</title>
 </head>
 
 <body>
 	<nav class="indigo darken-1" role="navigation">
 		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Workshop</a>
 			<ul class="right">
-				<li>Step 6</li>
+				<li>Step 7</li>
 			</ul>
 		</div>
 	</nav>
@@ -46,30 +49,48 @@
 	<div class="section no-pad-bot" id="index-banner">
 		<div class="container">
 			<div class="row">
-				
-				<ul class="collection with-header"><span class="new badge" id="whos-online-count">0</span>
-					<li class="collection-header"><h4>Who's online?</h4></li>
-					<span id="whos-online">
-						<li class="collection-item" id="chat-loading"><div>Loading..</div></li>
-					</span>
-					
-				</ul>
-				<br>
-				<div class="row center">
-					<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
+				<div class="col s8">
+					<ul class="collection with-header">
+						<li class="collection-header"><h4>Chat room</h4></li>
+						<li class="collection-item" id="new-message">
+							<div class="input-field">
+								<input id="last_name" type="text" class="validate" maxlength="120" length="120">
+								<label for="last_name">Enter your message here</label>
+							</div>
+							<a class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
+							<br>
+							<br>
+						</li>
+						<li class="collection-item">
+							<div id="chat-room">No messages yet</div>
+						</li>
+					</ul>
+
 				</div>
-				<br>
-				<br>
+				<div class="col s4">
+					<ul class="collection with-header"><span class="new badge" id="whos-online-count">0</span>
+						<li class="collection-header"><h5>Participants</h5></li>
+						<span id="whos-online">
+							<div class="collection-item" id="chat-loading">Loading..</div>
+						</span>
+					</ul>
+				</div>
 			</div>
+			<br>
+			<div class="row center">
+				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
+			</div>
+			<br>
+			<br>
 		</div>
 
 		<div id="modal-get-started" class="modal">
 			<div class="modal-content">
-				<h4>Proceed to step 7</h4>
+				<h4>Proceed to step 8</h4>
 				<p class="flow-text">
 					<blockquote class="flow-text">
 						git checkout -- .<br>
-						git checkout step7
+						git checkout step8
 					</blockquote>
 				</p>
 			</p>
