--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 	<div class="section no-pad-bot" id="index-banner">
 		<div class="container">
 			<div class="row">
-				<div class="col s8">
+				<div class="col s12 m12 l8">
 					<ul class="collection with-header">
 						<li class="collection-header"><h4>Chat room</h4></li>
 						<li class="collection-item" id="new-message">
 							<div class="input-field">
-								<input id="last_name" type="text" class="validate" maxlength="120" length="120">
+								<input id="last_name" type="text" autocomplete="off" class="validate" maxlength="120" length="120">
 								<label for="last_name">Enter your message here</label>
 							</div>
 							<a class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
@@ -67,7 +67,7 @@
 					</ul>
 
 				</div>
-				<div class="col s4">
+				<div class="col s12 m12 l4">
 					<ul class="collection with-header"><span class="new badge" id="whos-online-count">0</span>
 						<li class="collection-header"><h5>Participants</h5></li>
 						<span id="whos-online">
