--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div class="section no-pad-bot" id="index-banner">
 		<div class="container">
 			<div class="row">
-				<div class="col s8">
+				<div class="col s12 m12 l8">
 					<ul class="collection with-header">
 						<li class="collection-header"><h4>Chat room</h4></li>
 						<li class="collection-item" id="new-message">
@@ -67,7 +67,7 @@
 					</ul>
 
 				</div>
-				<div class="col s4">
+				<div class="col s12 m12 l4">
 					<ul class="collection with-header"><span class="new badge" id="whos-online-count">0</span>
 						<li class="collection-header"><h5>Participants</h5></li>
 						<span id="whos-online">
