--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 				<div class="col s12 m12 l8">
 					<ul class="collection with-header">
 						<li class="collection-header"><h4>Chat room</h4></li>
-						<li class="collection-item" id="new-message">
+						<li class="collection-item">
 							<div class="input-field">
-								<input id="last_name" type="text" autocomplete="off" class="validate" maxlength="120" length="120">
+								<input id="last_name" type="text" id="new-message" autocomplete="off" class="validate" maxlength="120" length="120">
 								<label for="last_name">Enter your message here</label>
 							</div>
-							<a class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
+							<a id="submit-new-message" class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
 							<br>
 							<br>
 						</li>
