--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 		.chat-name{
 			margin-left: 15px;
 		}
+		.chat-name, .chat-message{
+			position: relative;
+			top: -7px;
+		}
 		.list{
 			padding-top: 10px;
 			padding-left: 40px;
@@ -54,15 +58,15 @@
 						<li class="collection-header"><h4>Chat room</h4></li>
 						<li class="collection-item">
 							<div class="input-field">
-								<input id="last_name" type="text" id="new-message" autocomplete="off" class="validate" maxlength="120" length="120">
-								<label for="last_name">Enter your message here</label>
+								<input type="text" id="new-message" autocomplete="off" class="validate" maxlength="120" length="120">
+								<label for="new-message">Enter your message here</label>
 							</div>
 							<a id="submit-new-message" class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
 							<br>
 							<br>
 						</li>
 						<li class="collection-item">
-							<div id="chat-room">No messages yet</div>
+							<div id="chat-room"><div id="no-messages-yet">No messages yet</div></div>
 						</li>
 					</ul>
 
