--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 						<li class="collection-header"><h4>Chat room</h4></li>
 						<li class="collection-item">
 							<div class="input-field">
-								<input id="last_name" type="text" id="new-message" class="validate" maxlength="120" length="120">
-								<label for="last_name">Enter your message here</label>
+								<input type="text" id="new-message" class="validate" maxlength="120" length="120">
+								<label for="new-message">Enter your message here</label>
 							</div>
 							<a id="submit-new-message" class="waves-effect waves-light btn right blue">Send<i class="mdi-content-send right"></i></a>
 							<br>
