--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<nav class="indigo darken-1" role="navigation">
+	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Workshop</a>
 			<ul class="right">
 				<li>Step 0</li>
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<div class="row center">
-				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Get started</a>
+				<a class="modal-trigger waves-effect waves-light btn-large light-blue accent-4" href="#modal-get-started">Get started</a>
 			</div>
 			<br>
 			<br>
