--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
 			1px 1px 1px rgba(0,0,0,0.6),
 			1px 1px 1px rgba(0,0,0,0.6);
 		}
+		#step{
+			font-size: 20px;
+		}
+		h4{
+			margin-top: 2px;
+			margin-bottom: 30px;
+		}
+		.collapsible-header{
+			font-weight: bold;
+		}
 	</style>
 	<title>Step 2</title>
 </head>
 
 <body>
-	<nav class="indigo darken-1" role="navigation">
-		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Workshop</a>
-			<ul class="right">
-				<li>Step 2</li>
-			</ul>
+	<nav class="blue darken-4" role="navigation">
+		<div class="nav-wrapper container">
+			<a id="logo-container" href="#" class="brand-logo" style="font-size: 24px;">Building Realtime Web Apps</a>
 		</div>
 	</nav>
 
@@ -27,6 +35,7 @@
 		<div class="container">
 			<div class="row">
 				<br>
+				<div id="step" class="grey-text">Step 2</div>
 				<div class="collection-header"><h4>Frontend setup</h4></div>
 				<ul class="collapsible" data-collapsible="accordion">
 					<li>
@@ -78,14 +87,14 @@
 								</tr>
 							</table>
 							<p>
-							Press <strong>Send Event</strong> and expect an Alert!
+								Press <strong>Send Event</strong> and expect an Alert!
 							</p>
 						</div>
 					</li>
 				</ul>
 				<br>
 			</div>
-			<div class="row center">
+			<div class="row right">
 				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
 			</div>
 			<br>
