--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 		span.badge.new:after{
 			content: "";
 		}
+		span.badge.new{
+			padding-left: 5px;
+			padding-right: 5px;
+			min-width: 24px;
+		}
+		div.hr{
+			border-top: 1px solid #eeeeee;
+		}
 	</style>
 	<title>Step 5</title>
 </head>
@@ -46,9 +54,15 @@
 				<div class="collection-header"><h4>Who's online?</h4></div>
 				<br>
 				<ul class="collection">
-					<div class="collection-item">Number of users online<span class="new badge" id="whos-online-count">0</span></div>
+					<li class="collection-item">Number of users online
+						<span class="new badge light-blue accent-4" id="whos-online-count">0</span>
+					</li>
+					<li class="collection-item grey lighten-5">
+						<div id="whos-online">No one yet</div>
+					</li>
 				</ul>
-				<div id="whos-online">No one yet</div>
+				<br>
+				<div class="hr"></div>
 				<br>
 				<ul class="collapsible" data-collapsible="accordion">
 					<li>
