--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 </head>
 
 <body>
-	<nav class="indigo darken-1" role="navigation">
-		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Workshop</a>
-			<ul class="right">
-				<li>Step 1</li>
-			</ul>
+	<nav class="light-blue darken-4" role="navigation">
+		<div class="nav-wrapper container">
+			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
 		</div>
 	</nav>
 
@@ -30,7 +28,7 @@
 				<img class="materialboxed" src="img/websockets.png">
 			</div>
 			<div class="row center">
-				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
+				<a class="modal-trigger waves-effect waves-light btn-large light-blue accent-4" href="#modal-get-started">Next step</a>
 			</div>
 			<br>
 			<br>
