--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-	<nav class="blue darken-4" role="navigation">
+	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container">
 			<a id="logo-container" href="#" class="brand-logo" style="font-size: 24px;">Building Realtime Web Apps</a>
 		</div>
@@ -95,7 +95,7 @@
 				<br>
 			</div>
 			<div class="row right">
-				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
+				<a class="modal-trigger waves-effect waves-light btn-large light-blue accent-4 right" href="#modal-get-started">Next step</a>
 			</div>
 			<br>
 			<br>
