--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 		.with-code{
 			padding-bottom: 0 !important;
 		}
+		.collapsible-header{
+			font-weight: bold;
+		}
 	</style>
 	<title>Step 4</title>
 </head>
 
 <body>
-	<nav class="indigo darken-1" role="navigation">
+	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Workshop</a>
 			<ul class="right">
 				<li>Step 4</li>
@@ -68,7 +71,7 @@
 					</ul>
 				</div>
 				<div class="row center">
-					<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
+					<a class="modal-trigger waves-effect waves-light btn-large light-blue accent-4 right" href="#modal-get-started">Next step</a>
 				</div>
 				<br>
 				<br>
