--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		.with-code{
 			padding-bottom: 0 !important;
 		}
+		.collapsible-header{
+			font-weight: bold;
+		}
 		.chat-name{
 			margin-left: 15px;
 		}
@@ -39,11 +42,9 @@
 </head>
 
 <body>
-	<nav class="indigo darken-1" role="navigation">
-		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Workshop</a>
-			<ul class="right">
-				<li>Step 5</li>
-			</ul>
+	<nav class="light-blue darken-4" role="navigation">
+		<div class="nav-wrapper container">
+			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
 		</div>
 	</nav>
 
@@ -117,8 +118,8 @@
 						</div>
 					</li>
 				</ul>
-				<div class="row center">
-					<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
+				<div class="center">
+					<a class="modal-trigger waves-effect waves-light btn-large light-blue accent-4 right" href="#modal-get-started">Next step</a>
 				</div>
 				<br>
 				<br>
