--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
 
 <body>
 	<nav class="light-blue darken-4" role="navigation">
-		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Workshop</a>
-			<ul class="right">
-				<li>Step 4</li>
-			</ul>
+		<div class="nav-wrapper container">
+			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
 		</div>
 	</nav>
 
