--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
 		.list li{
 			list-style: disc;
 		}
+		.collapsible-header{
+			font-weight: bold;
+		}
+
 		span.badge.new:after{
 			content: "";
+		}
+		span.badge.new{
+			padding-left: 5px;
+			padding-right: 5px;
+			min-width: 24px;
+		}
+		div.hr{
+			border-top: 1px solid #eeeeee;
 		}
 		#whos-online-count{
 			margin-top: 35px;
@@ -41,11 +53,9 @@
 </head>
 
 <body>
-	<nav class="indigo darken-1" role="navigation">
-		<div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Workshop</a>
-			<ul class="right">
-				<li>Step 8</li>
-			</ul>
+	<nav class="light-blue darken-4" role="navigation">
+		<div class="nav-wrapper container">
+			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
 		</div>
 	</nav>
 
@@ -72,7 +82,7 @@
 
 				</div>
 				<div class="col s12 m12 l4">
-					<ul class="collection with-header"><span class="new badge" id="whos-online-count">0</span>
+					<ul class="collection with-header"><span class="new badge light-blue accent-4" id="whos-online-count">0</span>
 						<li class="collection-header"><h5>Participants</h5></li>
 						<span id="whos-online">
 							<div class="collection-item" id="chat-loading">Loading..</div>
@@ -82,7 +92,7 @@
 			</div>
 			<br>
 			<div class="row center">
-				<a class="modal-trigger waves-effect waves-light btn-large" href="#modal-get-started">Next step</a>
+				<a class="modal-trigger waves-effect waves-light btn-large light-blue accent-4 right" href="#modal-get-started">Next step</a>
 			</div>
 			<br>
 			<br>
