--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
 						</span>
 					</ul>
 				</div>
-				<div class="col right">
-					<a class="modal-trigger waves-effect waves-light btn-large light-blue accent-4 right" href="#modal-get-started">Next step</a>
-				</div>
 			</div>
 			<br>
+			<div class="center">
+				<a class="modal-trigger waves-effect waves-light btn-large light-blue accent-4 right" href="#modal-get-started">Next step</a>
+			</div>
 			<br>
 			<br>
 		</div>
