--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container">
-			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
+			<a id="logo-container" href="#" class="brand-logo">Building Realtime Web Apps</a>
 		</div>
 	</nav>
 
