--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 			1px 1px 1px rgba(0,0,0,0.6),
 			1px 1px 1px rgba(0,0,0,0.6);
 		}
+		.brand-logo{
+			font-size: 24px !important;
+		}
 	</style>
 	<title>Step 1</title>
 </head>
@@ -16,7 +19,7 @@
 <body>
 	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container">
-			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
+			<a id="logo-container" href="#" class="brand-logo">Building Realtime Web Apps</a>
 		</div>
 	</nav>
 
