--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			padding-left: 60px;
 			padding-right: 60px;
 		}
+		.brand-logo{
+			font-size: 24px !important;
+		}
 	</style>
 	<title>Building realtime web apps</title>
 </head>
@@ -30,7 +33,7 @@
 <body>
 	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container">
-			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
+			<a id="logo-container" href="#" class="brand-logo">Building Realtime Web Apps</a>
 		</div>
 	</nav>
 
