--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 		.collapsible-header{
 			font-weight: bold;
 		}
+		.brand-logo{
+			font-size: 24px !important;
+		}
+		#step{
+			font-size: 20px;
+		}
+		h4{
+			margin-top: 2px;
+			margin-bottom: 30px;
+		}
+
 	</style>
 	<title>Step 3</title>
 </head>
@@ -31,6 +42,7 @@
 		<div class="container">
 			<div class="row">
 				<br>
+				<div id="step" class="grey-text">Step 2</div>
 				<div class="collection-header"><h4>Backend setup</h4></div>
 				<ul class="collapsible" data-collapsible="accordion">
 					<li>
