--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 		.collapsible-header{
 			font-weight: bold;
 		}
+		.brand-logo{
+			font-size: 24px !important;
+		}
+		#step{
+			font-size: 20px;
+		}
+		h4{
+			margin-top: 2px;
+			margin-bottom: 30px;
+		}
+
 	</style>
 	<title>Step 4</title>
 </head>
@@ -22,7 +33,7 @@
 <body>
 	<nav class="light-blue darken-4" role="navigation">
 		<div class="nav-wrapper container">
-			<a id="logo-container" href="#" class="brand-logo">Workshop</a>
+			<a id="logo-container" href="#" class="brand-logo">Building Realtime Web Apps</a>
 		</div>
 	</nav>
 
@@ -30,6 +41,7 @@
 	<div class="section no-pad-bot" id="index-banner">
 		<div class="container">
 			<div class="row">
+				<div id="step" class="grey-text">Step 4</div>
 				<div class="collection-header"><h4>Authenticating Users</h4></div>
 				<br>
 				<ul class="collapsible" data-collapsible="accordion">
